RESOLVED FIXED78899
[Chromium] Web Inspector: terminated workers are not removed from dedicated worker list
https://bugs.webkit.org/show_bug.cgi?id=78899
Summary [Chromium] Web Inspector: terminated workers are not removed from dedicated w...
Yury Semikhatsky
Reported 2012-02-17 07:32:35 PST
1. Go to http://www.html5rocks.com/en/tutorials/workers/basics/ 2. Stop doWorker.js 3. Look at the list of dedicated workers. Result: The worker is still there. Expected: It should be removed from the list.
Attachments
Patch (4.58 KB, patch)
2012-02-17 07:39 PST, Yury Semikhatsky
pfeldman: review+
Yury Semikhatsky
Comment 1 2012-02-17 07:39:27 PST
Yury Semikhatsky
Comment 2 2012-02-19 23:51:51 PST
Note You need to log in before you can comment on or make changes to this bug.