[Chromium] Web Inspector: terminated workers are not removed from dedicated worker list https://bugs.webkit.org/show_bug.cgi?id=78899

Source/WebCore:

Notify inspector about starting context from WorkerContextProxy not from Worker.

Reviewed by Pavel Feldman.

* workers/Worker.cpp:
(WebCore::Worker::notifyFinished):
* workers/WorkerMessagingProxy.cpp:
(WebCore::WorkerMessagingProxy::startWorkerContext):

Source/WebKit/chromium:

Pass original WorkerContextProxy object to the inspector instrumentation instead
of Chromium-specific one for consistency with WorkerMessagingProxy implementation
in WebCore.

Reviewed by Pavel Feldman.

* src/WebWorkerClientImpl.cpp:
(WebKit::WebWorkerClientImpl::startWorkerContext):

Canonical link: https://commits.webkit.org/96037@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108212 268f45cc-cd09-0410-ab3c-d52691b4dbfc